--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         aspernatur consequuntur. Quibusdam provident maiores dolore nihil corporis reprehenderit dignissimos hic minima
         blanditiis explicabo aliquid dicta, animi cupiditate ut dolorum sapiente sint porro voluptatibus, ex, cum libero
         dolorem modi. Reiciendis, quo quae corrupti rerum quis aliquam quos molestiae.</p>
+
+
+    <ul>
+        <li>banana </li>
+        <li>Fruits </li>
+        <li>Watermilon </li>
+        <li>apple</li>
+        <li>Pinanaple </li>
+        <li>mango
+        </li>
+    </ul>
 </body>
 
 </html>
